--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     Hello!
+    <iframe src="http://23.100.88.99:8501/" width="600" height="600">
+        <p>Your browser does not support iframes.</p>
+    </iframe>
 </body>
 </html>
